--- a/latex/sections/comp_to_O1.tex
+++ b/latex/sections/comp_to_O1.tex
@@ -22,7 +22,7 @@ Für den Fairness-Test wurde gemessen, wie genau der Scheduler die CPU-Bandbreit
  	\label{fig:fair_meas_o1}
 \end{figure}
 
-In den Abbildungen \ref{fig:fair_meas_cfs}\&\ref{fig:fair_meas_o1} sind die Ergebnisse bei $N$=32 zu sehen. Auf der X-Achse befinden sich die Zeitpunkte in Sekunden, an denen ein oder mehrere Kinder mit der Integralrechnung fertig waren. Korrespondierend dazu zeigt die Y-Achse, wieviele Kinder zum Zeitpunkt X fertig waren. Beispielsweise zeigt Abbildung \ref{fig:fair_meas_cfs}, dass nach ca. 92 Sekunden 10 Kinder mit der Berechnung fertig waren. \\
+In den Abbildungen \ref{fig:fair_meas_cfs}\&\ref{fig:fair_meas_o1} sind die Ergebnisse bei $N=32$ zu sehen. Auf der X-Achse befinden sich die Zeitpunkte in Sekunden, an denen ein oder mehrere Kinder mit der Integralrechnung fertig waren. Korrespondierend dazu zeigt die Y-Achse, wieviele Kinder zum Zeitpunkt X fertig waren. Beispielsweise zeigt Abbildung \ref{fig:fair_meas_cfs}, dass nach ca. 92 Sekunden 10 Kinder mit der Berechnung fertig waren. Um auf die Gesamtanzahl von $N=32$ zu kommen, muss die angzeigte Anzahl an fertigen Kindern pro Zeitpunkt über den gesamten Zeitrahmen summiert werden. \\
 Zu erkennen ist, dass die Standardabweichung der verbrauchten Zeit pro Kind beim O(1)-Scheduler höher ist als die des CFS. Die weite Streuung der Daten im Diagramm \ref{fig:fair_meas_o1} zeigt, dass manche Kinder schneller fertig sind als andere. Die Kinder werden zu stark unterschiedlichen Zeitpunkten mit der Berechnung fertig.\\
 Dahingegen sind die Daten im Diagramm zum CFS knapper und konzentrierter um den Durchschnittswert angeordnet. CFS hat die CPU zu gleicheren Anteilen den Kindern zugeteilt, sodass diese ungefähr nach 92 Sekunden mit der Berechnung fertig waren. \\
 Nach \cite{papercomparison} kann zusammenfassend gesagt werden, dass CFS die zur Verfügung stehende CPU-Zeit auf eine fairere Weise über jede Aufgabe verteilt. Die Autoren nennen als Grün\-de dafür, dass CFS die Zeitquanten sehr granular verteilt und diese in Nanosekunden berechnet werden.
