weitere verbesserungen vruntime

--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -56,7 +56,7 @@ Die grundlegende Aufgabe eines Prozess-Schedulers ist es, lauffähige Prozesse m
 
 % Section-Überschriften werden in GROSSBUCHSTABEN umgestellt
 \section{Einleitung}
-Ein Betriebssystem kann als eine Komposition von Computerprogrammen definiert werden, welche die Hardware eines Computers verwaltet und Anwendungsprogrammen zur Verfügung stellt. Die Software Betriebssystem fungiert als Vermittler zwischen dem Benutzer eines Computers und dessen Hardware. Dabei ist der Prozess-Scheduler  für die Verteilung der CPU-Bandbreite gegenüber Aufgaben (Prozessen) zuständig. Der Algorithmus des Schedulers bestimmt die Reihenfolge der Abarbeitung und wirkt auf die optimale Leistung ein.\\
+Ein Betriebssystem kann als eine Komposition von Computerprogrammen definiert werden, welche die Hardware eines Computers verwaltet und Anwendungsprogrammen zur Verfügung stellt. Die Software Betriebssystem fungiert als Vermittler zwischen dem Benutzer eines Computers und dessen Hardware. Dabei ist der Prozess-Scheduler  für die Verteilung der CPU-Bandbreite gegenüber Prozessen zuständig. Der Algorithmus des Schedulers bestimmt die Reihenfolge der Abarbeitung und wirkt auf die optimale Leistung ein.\\
 Der Linux-Kernel ist einer der Bereiche, die aktiv durch die Open-Source-Community entwickelt und verbessert werden. Darunter fällt auch die Implementierung des CPU-Schedulers. Der Completely Fair Scheduler (CFS) löste mit der Kernelversion 2.6.23, den seit Version 2.6 im Einsatz befindlichen, O(1)-Scheduler ab.\\
 In diesem Artikel werden die Prinzipien und Funktionsweisen dieses Prozess-Schedulers dargestellt. Ferner wird kurz auf die Implementierung im aktuellen Linux-Kernel eingegangen und ein Vergleich zum Vorgänger vorgenommen.\\
 Dazu wird einleitend in Abschnitt \ref{s:basics} der Begriff Scheduling definiert sowie wichtige Parameter für Scheduling-Verfahren vorgestellt. Ferner erfolgt eine Beschreibung zur elementaren Datenstruktur Rot-Schwarz-Baum. Abschließend wird das im CFS zum Einsatz kommende \textit{com\-ple\-te\-ly-fair} Prinzip erläutert.\\
